--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,6 @@ Select c dropdown на JS
 }
 
 .checkbox__text {
-  padding-left: 25px;
   text-align: center;
   font-family: Arial, sans-serif;
   font-size: 20px;
@@ -465,7 +464,8 @@ Select c dropdown на JS
 }
 
 .tabs__content {
-  opacity: 0;
+  
+  display: none;
   visibility: hidden;
   background-color: #fafafa;
   color: black;
@@ -474,7 +474,7 @@ Select c dropdown на JS
 }
 
 .tabs__content_active {
-  opacity: 1;
+  display: block;
   visibility: visible;
 }
 
@@ -582,6 +582,10 @@ Select c dropdown на JS
   height: 100%;
   position: relative;
   z-index: 1;
+}
+
+.wrapper {
+	overflow: hidden;
 }
 
 /* Wrapper for all connect elements.
@@ -946,9 +950,7 @@ Select c dropdown на JS
   content: "";
 }
 
-.icon_vk-1:hover {
-  color: red;
-}
+
 
 .icon_arrow-left:before {
   content: "";
@@ -1509,6 +1511,7 @@ Select c dropdown на JS
 }
 
 .content-main-slider__button {
+	cursor: pointer;
   padding: 4px 10px 4px 18px;
   border: 3px solid #ffffff;
   border-radius: 15px;
@@ -2090,7 +2093,8 @@ Select c dropdown на JS
           flex: 0 0 auto;
   width: 10px;
   height: 10px;
-  background: url("../img/icons/remove.png") center no-repeat;
+  background: url("../img/icons/remove.png") center  no-repeat;
+  background-size: cover;
 }
 
 .section-filter .compare-filter__footer {
@@ -2170,8 +2174,10 @@ Select c dropdown на JS
 .order-catalog__item {
   font-size: 14px;
   line-height: 1.2;
+  padding: 8px 10px;
   color: #0097ac;
   border-radius: 0;
+  cursor: pointer;
 }
 
 .view-catalog {
@@ -2659,7 +2665,7 @@ Select c dropdown на JS
 .title-checkout {
   font-family: "UniSans", sans-serif;
   font-size: 36px;
-  line-height: 22px;
+  line-height: 1;
   font-weight: 900;
   text-transform: uppercase;
   color: #dadada;
@@ -2711,6 +2717,8 @@ Select c dropdown на JS
 }
 
 .order-checkout__btn {
+	transition: all .2s ease 0s;
+
   height: 33px;
   background-color: #f68038;
   padding: 0 20px;
@@ -2847,12 +2855,12 @@ Select c dropdown на JS
 }
 
 .checkout .tabs__list {
-  padding: 0px 30px 0px 30px;
+  padding: 0px 10px 0px 10px;
   display: block;
 }
 
 .checkout .tabs__btn {
-  height: 49px;
+  height: 59px;
   background-color: #72c9d4;
   padding: 17px 20px;
 }
@@ -2907,16 +2915,23 @@ Select c dropdown на JS
 
 .form-checkout__column {
   padding: 0 18px;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 50%;
-          flex: 0 1 50%;
+ 
 }
 
 .form-checkout__line {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+ display: flex;
+ 
   margin: 0px 0px 10px 0px;
+  
+  gap: 15px 20px;
+  width: 100%;
+  align-items: center;
+}
+
+
+
+.form-checkout__descr {
+	
 }
 
 .form-checkout__line:last-child {
@@ -2952,7 +2967,7 @@ Select c dropdown на JS
   font-weight: 900;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -2964,25 +2979,14 @@ Select c dropdown на JS
 }
 
 .form-checkout__input {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  margin-left: auto;
+
   padding: 0px 0px 0px 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+ 
 }
 
-.form-checkout__input input {
-  width: 100%;
-  max-width: 216px;
+.form-checkout__input  {
+  width: 190px;
+  
 }
 
 .form-checkout__check {
@@ -3313,6 +3317,7 @@ body._lock {
 
 .submenu-page__product .item-product__body {
   padding-left: 15px;
+  color: #36949f !important;
 }
 
 .submenu-page__product .item-product {
@@ -3358,12 +3363,7 @@ body._lock {
           flex: 0 0 100%;
 }
 
-body:not(._touch) .item-product:hover .item-product__add,
-body:not(._touch) .item-product:hover .item-product__price,
-body:not(._touch) .item-product:hover .item-product__title,
-body:not(._touch) .item-product:hover .item-product__old-price {
-  opacity: 0;
-}
+
 
 body._touch .item-product__hover {
   opacity: 0;
@@ -3764,6 +3764,7 @@ body._touch .item-product__hover {
   display: flex;
   position: relative;
   z-index: 2;
+  cursor: pointer;
 }
 
 .search-page__select {
@@ -4111,6 +4112,7 @@ body._touch .item-product__hover {
 .side-title {
   display: inline-block;
   margin-bottom: 1em;
+  cursor: pointer;
 }
 
 .info-menu {
@@ -4229,7 +4231,8 @@ body._touch .item-product__hover {
   }
 
   .section-filter .compare-filter__remove {
-    background: url("../img/icons/remove.webp") center no-repeat;
+    background: url("../img/icons/remove.png") center no-repeat;
+	 background-size: cover;
   }
 
   .section-filter .compare-filter__button span {
@@ -4257,7 +4260,7 @@ body._touch .item-product__hover {
   }
 
   .item-order__delete {
-    background: url("../img/icons/remove.webp") center/cover no-repeat;
+    background: url("../img/icons/remove.png") center/cover no-repeat;
   }
 
   ._lazyload {
@@ -4302,6 +4305,7 @@ body._touch .item-product__hover {
     display: -ms-flexbox;
     display: flex;
   }
+ 
 
   .order-catalog {
     display: -webkit-box;
@@ -4459,17 +4463,14 @@ body._touch .item-product__hover {
     text-decoration: none;
   }
 
-  .section-filter .compare-filter__remove:hover {
-    background-image: url("../img/icons/remove_h.png");
-  }
+  
 
   .order-checkout__btn:hover {
-    background-color: #1ab9ce;
+    background-color: white;
+	 color: #f68038;
   }
 
-  .item-order__delete:hover {
-    background-image: url("../img/icons/remove_h-orange.png");
-  }
+  
 
   .page__content {
     -webkit-box-flex: 1;
@@ -4538,15 +4539,7 @@ body._touch .item-product__hover {
     color: #333333;
   }
 
-@supports (-webkit-appearance:none) {
-    .section-filter .compare-filter__remove:hover {
-      background-image: url("../img/icons/remove_h.webp");
-    }
 
-    .item-order__delete:hover {
-      background-image: url("../img/icons/remove_h-orange.webp");
-    }
-}
 }
 
 @media (min-width: 992px) {
@@ -4669,12 +4662,27 @@ body._touch .item-product__hover {
     padding-right: 15px;
   }
 
-@supports (-webkit-appearance:none) {
 
-}
 }
 
 @media (max-width: 991.98px) {
+	.form-checkout__line {
+		flex-wrap: wrap;
+		margin-bottom:10px;
+	}
+	.form-checkout__input {
+		width: 235px;
+		flex: 0 1 auto;
+		padding-left: 0;
+		
+	}
+	.form-checkout__input input {
+		width: 100%;
+	}
+	.form-checkout__descr {
+		width: 100%;
+		font-size: 13px;
+	}
   .menu__body {
     position: fixed;
     width: 100%;
@@ -4689,7 +4697,7 @@ body._touch .item-product__hover {
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    padding: 120px 20px 30px 20px;
+    padding: 150px 20px 30px 20px;
   }
 
   .menu__body::before {
@@ -4855,6 +4863,7 @@ body._touch .item-product__hover {
 
   .categories-search__row {
     padding: 20px 0;
+	 display: flex;
   }
 
   .categories-search__list li {
@@ -4865,14 +4874,12 @@ body._touch .item-product__hover {
     font-size: 14px;
   }
 
-@supports (-webkit-appearance:none) {
 
-}
 }
 
 @media (max-width: 991.98px) and (max-width: 767.98px) {
   .menu__body {
-    padding: 90px 20px 30px 20px;
+    padding: 120px 20px 30px 20px;
   }
 
   .menu__body::before {
@@ -4897,9 +4904,17 @@ body._touch .item-product__hover {
 }
 
 @media (max-width: 767.98px) {
+	.item-order {
+		flex-wrap: wrap;
+	}
+	.item-order__content {
+		width: 100%;
+		flex: 1 0 100%;
+	}
   .pagging__arrow {
     display: none;
   }
+
 
   .tabs__btn {
     padding: 15px 16px;
@@ -5000,6 +5015,9 @@ body._touch .item-product__hover {
 }
 
 @media (max-width: 640px) {
+	.tabs__content .content {
+		padding: 15px 10px;
+	}
   .top-header__column_logo {
     width: 90px;
   }
@@ -5105,6 +5123,37 @@ body._touch .item-product__hover {
 }
 
 @media (max-width: 540px) {
+	.order-checkout__footer {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.order-checkout__total {
+		font-size: 18px;
+	}
+	.order-checkout__total span {
+		font-size: 24px;
+	}
+	.item-order__price {
+		font-size: 22px;
+	}
+	.item-order__quantity {
+		margin: 14px 0 14px auto;
+		display: flex;
+		justify-content: start;
+		align-items: center;
+	}
+	.item-order__content {
+		width: 100%;
+		flex-direction: column;
+		gap: 10px;
+	}
+	.item-order {
+		margin-bottom:20px;
+	}
+	.item-order__body {
+		padding-left: 0;
+	}
   .order-catalog__label {
     margin-bottom: 10px;
   }
@@ -5129,7 +5178,5 @@ body._touch .item-product__hover {
             flex: 0 1 50%;
   }
 
-@supports (-webkit-appearance:none) {
 
-}
 }
